--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,15 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+*.suo
+#过滤数据库文件、sln解决方案文件、配置文件
+*.mdb
+*.ldb
+*.config
+*.ipch
+*.sln
+
+Debug/
+Release/
+.vs/
