--- a/MagnetKernel/MagnetKernel.vcxproj
+++ b/MagnetKernel/MagnetKernel.vcxproj
@@ -31,7 +31,7 @@
   <ItemGroup>
     <ClInclude Include="BUILD_OPTIONS.h" />
     <ClInclude Include="MGDebug.h" />
-    <ClInclude Include="MGImageFunctions.h" />
+    <ClInclude Include="MGImageLoad.h" />
     <ClInclude Include="MGInstance.h" />
     <ClInclude Include="MGMath.h" />
     <ClInclude Include="MGPipeline.h" />
