Fully switch to pipeline

--- a/MagnetKernel/MagnetKernel.vcxproj
+++ b/MagnetKernel/MagnetKernel.vcxproj
@@ -38,6 +38,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MGDebug.cpp" />
     <ClCompile Include="MGInstance.cpp" />
+    <ClCompile Include="MGModel.cpp" />
     <ClCompile Include="MGPipeline.cpp" />
     <ClCompile Include="MGRenderer.cpp" />
     <ClCompile Include="MGWindow_Share.cpp" />
@@ -50,6 +51,7 @@
     <ClInclude Include="MGImageLoad.h" />
     <ClInclude Include="MGInstance.h" />
     <ClInclude Include="MGMath.h" />
+    <ClInclude Include="MGModel.h" />
     <ClInclude Include="MGPipeline.h" />
     <ClInclude Include="MGRenderer.h" />
     <ClInclude Include="MGShare.h" />
