--- a/MagnetKernel/MagnetKernel.vcxproj
+++ b/MagnetKernel/MagnetKernel.vcxproj
@@ -39,11 +39,13 @@
     <ClCompile Include="MGDebug.cpp" />
     <ClCompile Include="MGInstance.cpp" />
     <ClCompile Include="MGModel.cpp" />
-    <ClCompile Include="MGPipeline.cpp" />
+    <ClCompile Include="MGModelInstance.cpp" />
+    <ClCompile Include="MGPipelineManager.cpp" />
     <ClCompile Include="MGRenderer.cpp" />
     <ClCompile Include="MGWindow_Share.cpp" />
     <ClCompile Include="MGWindow_win32.cpp" />
     <ClCompile Include="MGWindow_glfw.cpp" />
+    <ClCompile Include="MGRenderingManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BUILD_OPTIONS.h" />
@@ -52,11 +54,13 @@
     <ClInclude Include="MGInstance.h" />
     <ClInclude Include="MGMath.h" />
     <ClInclude Include="MGModel.h" />
-    <ClInclude Include="MGPipeline.h" />
+    <ClInclude Include="MGModelInstance.h" />
+    <ClInclude Include="MGPipelineManager.h" />
     <ClInclude Include="MGRenderer.h" />
     <ClInclude Include="MGShare.h" />
     <ClInclude Include="MGWindow.h" />
     <ClInclude Include="Platform.h" />
+    <ClInclude Include="MGRenderingManager.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
